refactor: 重构项目并更新配置
- 修改项目名称为 hexo-generator-ai-summary
- 更新 package.json 文件，添加更多项目信息
- 更新 README.md 文件，调整项目描述和安装指南
- 在 .gitignore 中添加 node_modules目录

--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
-  "name": "hexo-ai-summary",
+  "name": "hexo-generator-ai-summary",
   "version": "1.0.0",
+  "description": "Hexo plugin for generating AI-powered article summaries",
+  "keywords": [
+    "hexo-plugin",
+    "hexo",
+    "ai",
+    "summary",
+    "deepseek"
+  ],
+  "homepage": "https://github.com/liuzhihang/hexo-generator-ai-summary#readme",
+  "bugs": {
+    "url": "https://github.com/liuzhihang/hexo-generator-ai-summary/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liuzhihang/hexo-generator-ai-summary.git"
+  },
+  "license": "MIT",
+  "author": "liuzhihang liuzhihangs@qq.com",
+  "type": "commonjs",
   "main": "index.js",
-  "peerDependencies": {
-    "hexo": "^7.0.0"
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -12,11 +34,11 @@
     "js-yaml": "^4.1.0",
     "lodash.merge": "^4.6.2"
   },
-  "keywords": [
-    "hexo-plugin",
-    "hexo"
-  ],
-  "author": "liuzhihang",
-  "license": "MIT",
-  "description": ""
+  "devDependencies": {},
+  "peerDependencies": {
+    "hexo": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
