--- a/package.json
+++ b/package.json
@@ -2,28 +2,8 @@
   "name": "hexo-generator-ai-summary",
   "version": "1.0.0",
   "description": "Hexo plugin for generating AI-powered article summaries",
-  "keywords": [
-    "hexo-plugin",
-    "hexo",
-    "ai",
-    "summary",
-    "deepseek"
-  ],
-  "homepage": "https://github.com/liuzhihang/hexo-generator-ai-summary#readme",
-  "bugs": {
-    "url": "https://github.com/liuzhihang/hexo-generator-ai-summary/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/liuzhihang/hexo-generator-ai-summary.git"
-  },
-  "license": "MIT",
-  "author": "liuzhihang liuzhihangs@qq.com",
-  "type": "commonjs",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,9 +14,8 @@
     "js-yaml": "^4.1.0",
     "lodash.merge": "^4.6.2"
   },
-  "devDependencies": {},
   "peerDependencies": {
-    "hexo": "^7.0.0"
+    "hexo": ">=7.0.0"
   },
   "engines": {
     "node": ">=14.0.0"
